src/parser/Parser.java
package parser;

import java.io.File;
import java.nio.file.Paths;
import java.util.LinkedList;
import java.util.List;

import AST.*;
import lexer.Scanner;
import token.Token;
import token.TokenType;
import utilities.FileWriterWrapper;

public class Parser {

	private Scanner scanner;
	private Token lookahead;
	private AST ast;
	
	private String rootDir;
	private String outputDir;
	private String selectedFile;
	
	private FileWriterWrapper outputWriter;
	private FileWriterWrapper errorWriter;
	
	private enum NonTerminal {
		prog, classDecl, classDeclList, varOrfuncDeclTail, varOrfuncDeclList,
		extendClass, idList, funcDecl, funcDeclList, funcHead, classScope,
		funcDef, funcDefList, funcBody, varstat, varstatList, varstatPrime,
		varDecl, varDeclList, statement, statementList, statementPrime,
		assignStat, statBlock, expr, exprTail, relExpr, arithExpr, 
		arithExprTail, sign, term, termTail, factor, factorTemp, 
		factorPrime, factorTempTemp, variable, variableTail, variablePrime,
		indice, indiceList, arraySize, arraySizeList, type, fParams,
		fParamsTail, fParamsTailList, aParams, aParamsTail, aParamsTailList,
		assignOp, relOp, addOp, multOp
	};

	public Parser(String fileName) {
		scanner = new Scanner(fileName);
		rootDir = (Paths.get("").toAbsolutePath().toString());
		outputDir = rootDir + "\\src\\parser\\output\\";
		selectedFile = fileName;
		File output = new File(outputDir);
		if (!output.exists()) {
			output.mkdirs();
		}
		
		String resultFileName = outputDir + getFileName(selectedFile) + "_out.txt";
		String errorFileName = outputDir + getFileName(selectedFile) + "_error.txt";
		outputWriter = new FileWriterWrapper(resultFileName);
		errorWriter = new FileWriterWrapper(errorFileName);
	}
	
	private void write(String str) {
		//System.out.println(str);
		outputWriter.write(str + "\n");
	}
	
	private void error(String str) {
		System.out.println(str);
		errorWriter.write(str + "\n");
	}
	
	
	private void nextToken() {
		lookahead = scanner.nextToken();
	}
	
	private boolean match(TokenType tokenType) {
		if (lookahead.type == tokenType) {
			nextToken();
			return true;
		}
		else {
			error("Syntax error at line " + lookahead.lineNum + ". Expected (terminal: " + tokenType + ").");
			nextToken();
			return false;
		}
	}
	
	private boolean match(TokenType tokenType, ASTNode node) {
		if (lookahead.type == tokenType) {
			switch (tokenType) {
				case ID: node = new IdNode("id", lookahead.value); break;
				case FLOAT_NUM:
				case INT_NUM: node = new NumNode("num", lookahead.value); break;
			default:
				break;
			}
			
			nextToken();
			return true;
		}
		else {
			error("Syntax error at line " + lookahead.lineNum + ". Expected (terminal: " + tokenType + ").");
			nextToken();
			return false;
		}
	}
	
	private boolean skipErrors(NonTerminal nonTerminal) 
	{
		LinkedList<TokenType> firstSet = firstSet(nonTerminal);
		LinkedList<TokenType> followSet = followSet(nonTerminal);
		if (firstSet.contains(lookahead.type) | (firstSet.contains(TokenType.EPSILON) & followSet.contains(lookahead.type))) {
			return true;
		}
		else {
			error("Syntax error at line " + lookahead.lineNum  + ". Expected (non-terminal: " + nonTerminal + ").");
			while (!firstSet.contains(lookahead.type) & !followSet.contains(lookahead.type) & lookahead.type != TokenType.EOF) {
				nextToken();
				if (firstSet.contains(TokenType.EPSILON) & followSet.contains(lookahead.type)) {
					return false;
				}
			}
			
			return true;
		}
	}
	
	public boolean parse() {
		ast = new AST();
		ASTNode node = null;
		nextToken();
		if (prog(node) & match(TokenType.EOF)) {
			errorWriter.close();
			outputWriter.close();
			scanner.close();
			return true;
		}
		else {
			errorWriter.close();
			outputWriter.close();
			scanner.close();
			return false;
		}

	}
	
	private boolean prog(ASTNode node) { 
	// prog -> classDeclList funcDefList 'main' funcBody ';'
		
		ClassListNode classListNode = null;
		FuncDefListNode funcDefListNode = null;
		StatBlockNode statBlockNode = null;
		
		if (!skipErrors(NonTerminal.prog)) return false;
		if (firstSetContains(NonTerminal.classDeclList) | followSetContains(NonTerminal.classDeclList) | followSetContains(NonTerminal.funcDeclList)) {
			write("prog -> classDeclList funcDefList 'main' funcBody ';'");
			if (classDeclList(classListNode) & funcDefList(funcDefListNode) & match(TokenType.MAIN) & funcBody(statBlockNode) & match(TokenType.SEMICOLON)) {
				
				node = AST.makeFamily("prog", classListNode, funcDefListNode, statBlockNode);
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean classDecl(ASTNode node) {
	// classDecl -> 'class' 'id' extendClass '{' varOrfuncDeclList '}' ';'
		IdNode idNode = null;
		InherListNode inherListNode = null;
		MembListNode memberListNode = null;
		
		if (!skipErrors(NonTerminal.classDecl)) return false;
		if (firstSetContains(TokenType.CLASS)) {
			write("classDecl -> 'class' 'id' extendClass '{' varOrfuncDeclList '}' ';'");
			if (match(TokenType.CLASS) & match(TokenType.ID, idNode) & extendClass(inherListNode) &
					match(TokenType.LBRACE) & varOrfuncDeclList(memberListNode) & 
					match(TokenType.RBRACE) & match(TokenType.SEMICOLON)) {
				
				node = AST.makeFamily("classDecl", idNode, inherListNode, memberListNode);
				return true;
			}
			else {
				return false;
			}
		} 
		else {
			return false;
		}
	}
	
	private boolean classDeclList(ASTNode node) {
	// classDeclList -> classDecl classDeclList | EPSILON
		
		ClassListNode classListNode = null;
		ClassDeclNode classDeclNode = null;
		
		if (!skipErrors(NonTerminal.classDeclList)) return false;
		if (firstSetContains(NonTerminal.classDecl)) {
			write("classDeclList -> classDecl classDeclList");
			if (classDecl(classDeclNode) & classDeclList(classListNode)) {
				node = AST.makeFamily("classList", classDeclNode, null);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.classDeclList)) {
			write("classDeclList -> EPSILON");
			node = new ClassListNode("classList");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean varOrfuncDeclTail(ASTNode node) {
		DimListNode dimListNode = null;
		FparamListNode fParamListNode = null;
		
		
	// varOrfuncDeclTail -> arraySizeList | '(' fParams ')'
		if (!skipErrors(NonTerminal.varOrfuncDeclTail)) return false;
		if (firstSetContains(NonTerminal.arraySizeList)) {
			write("varOrfuncDeclTail -> arraySizeList");
			if (arraySizeList(dimListNode)) {
				node = dimListNode;
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.LPAREN)){
			write("varOrfuncDeclTail -> '(' fParams ')'");
			if (match(TokenType.LPAREN) & fParams(fParamListNode) & match(TokenType.RPAREN)) {
				node = fParamListNode;
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.varOrfuncDeclTail)) {
			write("varOrfuncDeclTail -> arraySizeList");
			if (arraySizeList(dimListNode)) {
				node = AST.makeNode();
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean varOrfuncDeclList(ASTNode node) {
	// varOrfuncDeclList -> type 'id' varOrfuncDeclTail ';' varOrfuncDeclList 
	//	| EPSILON
		MembListNode membListNode = null;
		TypeNode typeNode = null;
		IdNode idNode = null;
		ASTNode dimOrfParamListNode = null;
		
		if (!skipErrors(NonTerminal.varOrfuncDeclList)) return false;
		if (firstSetContains(NonTerminal.type)) {
			write("varOrfuncDeclList -> type 'id' varOrfuncDeclTail ';' varOrfuncDeclList");
			if (type(typeNode) & match(TokenType.ID, idNode) & varOrfuncDeclTail(dimOrfParamListNode) &
					match(TokenType.SEMICOLON) & varOrfuncDeclList(membListNode)) {
				
				MembDeclNode membDeclNode = (MembDeclNode) AST.makeFamily("membDecl", typeNode, idNode, null);
				node = AST.makeFamily("membList", membDeclNode, null);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.varOrfuncDeclList)) {
			write("varOrfuncDeclList -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	
	private boolean extendClass(ASTNode node) {
	// extendClass -> ':' 'id' idList | EPSILON
		ASTNode idListNode = null;
		IdNode idNode = null;
		
		if (!skipErrors(NonTerminal.extendClass)) return false;
		if (firstSetContains(TokenType.COLON)) {
			write("extendClass -> ':' 'id' idList");
			if (match(TokenType.COLON) & match(TokenType.ID, idNode) & idList(idListNode)) {
				node = AST.makeFamily("inherList", idNode, idListNode);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.extendClass)) {
			write("extendClass -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean idList(ASTNode node) {
	// idList -> ',' 'id' idList | EPSILON
		IdNode idNode = null;
		if (!skipErrors(NonTerminal.idList)) return false;
		if (firstSetContains(TokenType.COMMA)) {
			write("idList -> ',' 'id' idList");
			if (match(TokenType.COMMA) & match(TokenType.ID, idNode) & idList(node)) {
				node = idNode.makeSibling(node);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.idList)) {
			write("idList -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean funcHead(ASTNode node) {
	// funcHead -> type 'id' classScope '(' fParams ')'
		TypeNode typeNode = null;
		IdNode idNode = null;
		ScopeSpecNode scopeSpecNode = null;
		FparamListNode fParamListNode = null;
		
		if (!skipErrors(NonTerminal.funcHead)) return false;
		if (firstSetContains(NonTerminal.type)) {
			write("funcHead -> type 'id' classScope '(' fParams ')'");
			if (type(typeNode) & match(TokenType.ID, idNode) & classScope(scopeSpecNode) &
					match(TokenType.LPAREN) & fParams(fParamListNode) & match(TokenType.RPAREN)) {
				
				node = typeNode;
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean classScope(ASTNode node) {
	// classScope -> 'sr' 'id' | EPSILON
		IdNode idNode = null;
		if (!skipErrors(NonTerminal.classScope)) return false;
		if (firstSetContains(TokenType.SR)) {
			write("classScope -> 'sr' 'id'");
			if (match(TokenType.SR) & match(TokenType.ID)) {
				node = AST.makeFamily("scopeNode", idNode);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.classScope)) {
			write("classScope -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean funcDef(ASTNode node) {
	// funcDef -> funcHead funcBody ';'
		ASTNode funcHeadNode = null;
		StatBlockNode statBlockNode = null;
		
		if (!skipErrors(NonTerminal.funcDef)) return false;
		if (firstSetContains(NonTerminal.funcHead)) {
			write("funcDef -> funcHead funcBody ';'");
			if (funcHead(funcHeadNode) & funcBody(statBlockNode) & match(TokenType.SEMICOLON)) {
				
				node = AST.makeFamily("funcDef", funcHeadNode, statBlockNode);
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean funcDefList(ASTNode node) {
	// funcDefList -> funcDef funcDefList | EPSILON	
		FuncDefNode funcDefNode = null;
		FuncDefListNode funcDefListNode = null;
		
		if (!skipErrors(NonTerminal.funcDefList)) return false;
		if (firstSetContains(NonTerminal.funcDef)) {
			write("funcDefList -> funcDef funcDefList");
			if (funcDef(funcDefNode) & funcDefList(funcDefListNode)) {
				node = AST.makeFamily("funcDefList", funcDefNode, null);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.funcDefList)) {
			write("funcDefList -> EPSILON");
			node = AST.makeNode();
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean funcBody(ASTNode node) {
	// funcBody -> '{' varstatList'}'
		StatBlockNode statBlockNode = null;
		
		if (!skipErrors(NonTerminal.funcBody)) return false;
		if (firstSetContains(TokenType.LBRACE)) {
			write("funcBody -> '{' varstatList'}'");
			if (match(TokenType.LBRACE) & varstatList(statBlockNode) & match(TokenType.RBRACE)) {
				node = statBlockNode;
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean varstat(ASTNode node) {
	// varstat -> 'id' varstatPrime ';'
	//	 | 'integer' 'id' arraySizeList ';'
	//	 | 'float' 'id' arraySizeList ';'
	//	 | statementPrime
		
		IdNode idNode = null;
		ASTNode varstatPrimeNode = AST.makeNode();
		
		
		if (!skipErrors(NonTerminal.varstat)) return false;
		if (firstSetContains(TokenType.ID)) {
			
			write("varstat -> 'id' varstatPrime ';'");
			if (match(TokenType.ID, idNode) & varstatPrime(node) & match(TokenType.SEMICOLON)) {
				
				node = varstatPrimeNode;
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.INTEGER)) {
			write("varstat -> 'integer' 'id' arraySizeList ';'");
			if (match(TokenType.INTEGER) & match(TokenType.ID) & arraySizeList(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.FLOAT)) {
			write("varstat -> 'float' 'id' arraySizeList ';'");
			if (match(TokenType.FLOAT) & match(TokenType.ID) & arraySizeList(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(NonTerminal.statementPrime)) {
			write("varstat -> statementPrime");
			if (statementPrime(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean varstatList(ASTNode node) {
	// varstatList -> varstat varstatList | EPSILON	\
		StatOrVarDeclNode statOrVarDeclNode = null;
		StatBlockNode statBlockNode = null;
		if (!skipErrors(NonTerminal.varstatList)) return false;
		if (firstSetContains(NonTerminal.varstat)) {
			write("varstatList -> varstat varstatList");
			if (varstat(statOrVarDeclNode) & varstatList(statBlockNode)) {
				
				node = AST.makeFamily("statBlock", statOrVarDeclNode, null);
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.varstatList)) {
			write("varstatList -> EPSILON");
			node = AST.makeNode();
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean varstatPrime(ASTNode node) {
	//varstatPrime -> 'id' arraySizeList
	//	 | variableTail assignOp expr	
		DimListNode dimListNode = null;
		IdNode idNode = null;
		
		if (!skipErrors(NonTerminal.varstatPrime)) return false;
		if (firstSetContains(TokenType.ID)) {
			write("varstatPrime -> 'id' arraySizeList");
			if (match(TokenType.ID, idNode) & arraySizeList(dimListNode)) {
				
				//node = AST.makeFamily("varDecl", node.getLeftmostChild(), idNode, dimListNode);
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(NonTerminal.variableTail) | followSetContains(NonTerminal.variableTail)) {
			write("varstatPrime -> variableTail assignOp expr");
			
			VarNode varNode =  (VarNode)node;
			ExprNode exprNode = null;
			
			if (variableTail(varNode) & assignOp(node) & expr(exprNode)) {
				
				node = AST.makeFamily("assignStat", varNode, exprNode);
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean statement(ASTNode node) {
	// statement -> assignStat ';'
	//	 | 'if' '(' expr ')' 'then' statBlock 'else' statBlock ';'
	//	 | 'for' '(' type 'id' assignOp expr ';' relExpr ';' assignStat ')' statBlock ';'
	//	 | 'read' '(' variable ')' ';'
	//	 | 'write' '(' expr ')' ';'
	//	 | 'return' '(' expr ')' ';'
		if (!skipErrors(NonTerminal.statement)) return false;
		if (firstSetContains(NonTerminal.assignStat)) {
			write("statement -> assignStat ';'");
			if (assignStat(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.IF)) {
			write("statement -> 'if' '(' expr ')' 'then' statBlock 'else' statBlock ';'");
			if (match(TokenType.IF) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.THEN) & statBlock(node) &
					match(TokenType.ELSE) & statBlock(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.FOR)) {
			write("statement -> 'for' '(' type 'id' assignOp expr ';' relExpr ';' assignStat ')' statBlock ';'");
			if (match(TokenType.FOR) & match(TokenType.LPAREN) & type(node) & match(TokenType.ID) &
					assignOp(node) & expr(node) & match(TokenType.SEMICOLON) & relExpr(node) & 
					match(TokenType.SEMICOLON) & assignStat(node) & match(TokenType.RPAREN) &
					statBlock(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.READ)) {
			write("statement -> 'read' '(' variable ')' ';'");
			if (match(TokenType.READ) & match(TokenType.LPAREN) & variable(node) & 
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.WRITE)) {
			write("statement -> 'write' '(' expr ')' ';'");
			if (match(TokenType.WRITE) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.RETURN)) {
			write("statement -> 'return' '(' expr ')' ';'");
			if (match(TokenType.RETURN) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean statementList(ASTNode node) {
	// statementList -> statement statementList | EPSILON
		if (!skipErrors(NonTerminal.statementList)) return false;
		if (firstSetContains(NonTerminal.statement)) {
			write("statementList -> statement statementList");
			if (statement(node) & statementList(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.statementList)) {
			write("statementList -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean statementPrime(ASTNode node) {
	// statementPrime -> 'if' '(' expr ')' 'then' statBlock 'else' statBlock ';'
	//	 | 'for' '(' type 'id' assignOp expr ';' relExpr ';' assignStat ')' statBlock ';'
	//	 | 'read' '(' variable ')' ';'
	//	 | 'write' '(' expr ')' ';'
	//	 | 'return' '(' expr ')' ';'	
		if (!skipErrors(NonTerminal.statementPrime)) return false;
		if (firstSetContains(TokenType.IF)) {
			write("statementPrime -> 'if' '(' expr ')' 'then' statBlock 'else' statBlock ';'");
			if (match(TokenType.IF) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.THEN) & statBlock(node) &
					match(TokenType.ELSE) & statBlock(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.FOR)) {
			write("statementPrime -> 'for' '(' type 'id' assignOp expr ';' relExpr ';' assignStat ')' statBlock ';'");
			if (match(TokenType.FOR) & match(TokenType.LPAREN) & type(node) & match(TokenType.ID) &
					assignOp(node) & expr(node) & match(TokenType.SEMICOLON) & relExpr(node) & 
					match(TokenType.SEMICOLON) & assignStat(node) & match(TokenType.RPAREN) &
					statBlock(node) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.READ)) {
			write("statementPrime -> 'read' '(' variable ')' ';'");
			if (match(TokenType.READ) & match(TokenType.LPAREN) & variable(node) & 
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.WRITE)) {
			write("statementPrime -> 'write' '(' expr ')' ';'");
			if (match(TokenType.WRITE) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.RETURN)) {
			write("statementPrime -> 'return' '(' expr ')' ';'");
			if (match(TokenType.RETURN) & match(TokenType.LPAREN) & expr(node) &
					match(TokenType.RPAREN) & match(TokenType.SEMICOLON)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean assignStat(ASTNode node) {
	// assignStat -> variable assignOp expr	
		if (!skipErrors(NonTerminal.assignStat)) return false;
		if (firstSetContains(NonTerminal.variable)) {
			write("assignStat -> variable assignOp expr");
			if (variable(node) & assignOp(node) & expr(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean statBlock(ASTNode node) {
	// statBlock -> '{' statementList '}' | statement | EPSILON	
		if (!skipErrors(NonTerminal.statBlock)) return false;
		if (firstSetContains(TokenType.LBRACE)) {
			write("statBlock -> '{' statementList '}'");
			if (match(TokenType.LBRACE) & statementList(node) & match(TokenType.RBRACE)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(NonTerminal.statement)) {
			write("statBlock -> statement");
			if (statement(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.statBlock)) {
			write("statBlock -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean expr(ASTNode node) {
	// expr -> arithExpr exprTail	
		if (!skipErrors(NonTerminal.expr)) return false;
		if (firstSetContains(NonTerminal.arithExpr)) {
			write("expr -> arithExpr exprTail");
			if (arithExpr(node) & exprTail(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean exprTail(ASTNode node) {
	// exprTail -> relOp arithExpr | EPSILON	
		if (!skipErrors(NonTerminal.exprTail)) return false;
		if (firstSetContains(NonTerminal.relOp)) {
			write("exprTail -> relOp arithExpr");
			if (relOp(node) & arithExpr(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.exprTail)) {
			write("exprTail -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean relExpr(ASTNode node) {
	// relExpr -> arithExpr relOp arithExpr	
		if (!skipErrors(NonTerminal.relExpr)) return false;
		if (firstSetContains(NonTerminal.arithExpr)) {
			write("elExpr -> arithExpr relOp arithExpr");
			if (arithExpr(node) & relOp(node) & arithExpr(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean arithExpr(ASTNode node) {
	// arithExpr -> term arithExprTail	
		if (!skipErrors(NonTerminal.arithExpr)) return false;
		if (firstSetContains(NonTerminal.term)) {
			write("arithExpr -> term arithExprTail");
			if (term(node) & arithExprTail(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean arithExprTail(ASTNode node) {
	// arithExprTail -> addOp term arithExprTail | EPSILON
		if (!skipErrors(NonTerminal.arithExprTail)) return false;
		if (firstSetContains(NonTerminal.addOp)) {
			write("arithExprTail -> addOp term arithExprTail");
			if (addOp(node) & term(node) & arithExprTail(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.arithExprTail)) {
			write("arithExprTail -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
	
	private boolean sign(ASTNode node) {
	// sign -> '+' | '-'	
		if (!skipErrors(NonTerminal.sign)) return false;
		if (firstSetContains(TokenType.ADD)) {
			write("sign -> '+'");
			if (match(TokenType.ADD)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (firstSetContains(TokenType.SUB)) {
			write("sign -> '-'");
			if (match(TokenType.SUB)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean term(ASTNode node) {
	// term -> factor termTail	
		if (!skipErrors(NonTerminal.term)) return false;
		if (firstSetContains(NonTerminal.factor)) {
			write("term -> factor termTail");
			if (factor(node) & termTail(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else {
			return false;
		}
	}
	
	private boolean termTail(ASTNode node) {
	// termTail -> multOp factor termTail | EPSILON
		if (!skipErrors(NonTerminal.termTail)) return false;
		if (firstSetContains(NonTerminal.multOp)) {
			write("termTail -> multOp factor termTail");
			if (multOp(node) & factor(node) & termTail(node)) {
				return true;
			}
			else {
				return false;
			}
		}
		else if (followSetContains(NonTerminal.termTail)) {
			write("termTail -> EPSILON");
			return true;
		}
		else {
			return false;
		}
	}
